# ai-trader-education-bot

./: .env.example  .gitignore  CLAUDE.md  README.md  brand.config.json  docker-compose.yml  jest.config.ts  knowledge_search.ipynb  package-lock.json  package.json  requirements.txt  rsbuild.config.ts  search.py  setup.sh  vercel.json
apps/backend/: .env.example  Dockerfile  cloudbuild.yaml  package.json  pyproject.toml  tsconfig.json
apps/backend/scripts/: sample-payload.json  test-endpoints.sh  test_postgres_local.sh
apps/backend/src/: index.ts  main.py
apps/backend/src/Explanations/: 608852024448_20260207_130513.txt  608852264228_20260207_130715.txt  608855288908_20260207_133400.txt  608855288908_20260207_133503.txt  608856170128_20260207_133736.txt  608856947988_20260207_134312.txt  608858250788_20260207_135309.txt  608869634588_20260207_151640.txt  608869634588_20260207_151738.txt  sample-001_20260207_121129.txt  sample-001_20260207_121940.txt  test-123_20260207_121301.txt  test-123_20260207_121523.txt  test-123_20260207_121834.txt  test-456_20260207_121311.txt  test-456_20260207_121532.txt  test-456_20260207_121840.txt  test123_20260207_114758.txt
apps/backend/src/agents/: __init__.py  analyst_agent.py  tutor_agent.py
apps/backend/src/db/: __init__.py  crud_analysis.py  crud_transactions.py  engine.py  models.py
apps/backend/src/models/: __init__.py  schemas.py
apps/backend/src/routes/: __init__.py  analysis.py  transactions.py
apps/backend/src/services/: rag.py
data/: url_map.json
docs/: DERIVWS_AUTHENTICATED_WEBSOCKET_FLOW.md  (+2 more)
search/: api.py  (+9 more)
(+252 files in other folders)
