[project]
name = "agent-analysis-backend"
version = "0.1.0"
description = "Agent Analysis API: Analyst + Tutor agents for trade education"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "Pillow>=10.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    # RAG / search
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-openai>=0.3",
    "langchain-nvidia-ai-endpoints>=0.3",
    "langchain-text-splitters>=0.3",
    "faiss-cpu>=1.9",
    "pydantic-settings>=2.7",
    "beautifulsoup4>=4.12",
    "markdownify>=0.14",
    "lxml>=5.3",
]

[tool.uv]
dev-dependencies = []
